# self-tuning-gate

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: maes_autotune.yaml  self_tuning.self_driving.yaml  self_tuning.self_driving_atlas_explore.yaml
examples/: toy_stream.py
maes_shockgate/: __init__.py  cli.py  entrypoints.py  eoc.py
maes_shockgate/adapters/: core.py
maes_shockgate/contracts/: esn.py  srnn.py
maes_shockgate/gates/: autotune_gate.py  phase_energy.py
maes_shockgate/metrics/: core.py
maes_shockgate/policies/: shockgate.py
maes_shockgate/self_tune/: core.py  dual_ht.py  packs.py
maes_shockgate/telemetry/: writer.py
maes_shockgate/utils/: phase.py
tests/: test_eoc.py
